--- a/librarySystem/grails-app/conf/application.yml
+++ b/librarySystem/grails-app/conf/application.yml
@@ -106,7 +106,7 @@ environments:
             url: jdbc:mysql://localhost:3306/library
     production:
         dataSource:
-            dbCreate: none
+            dbCreate: update
             url: jdbc:mysql://localhost:3306/library
             properties:
                 jmxEnabled: true
